--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "date-fns": "^4.1.0",
     "ethiopian-date": "^0.0.6",
+    "express": "^5.1.0",
     "grammy": "^1.35.1",
     "mongoose": "^8.13.2",
     "node-telegram-bot-api": "^0.66.0",
