--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.8.4",
+    "cloudinary": "^1.41.3",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "ethiopian-date": "^0.0.6",
     "express": "^5.1.0",
     "grammy": "^1.35.1",
     "mongoose": "^8.13.2",
+    "multer": "^1.4.5-lts.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "node-telegram-bot-api": "^0.66.0",
     "telegraf": "^4.16.3"
   }
